--- a/css.css
+++ b/css.css
@@ -2,6 +2,13 @@
 	position: relative;
 }
 
+.board {
+	position: absolute;
+	border: 4px solid grey;
+	width: 220px;
+	height: 440px;
+}
+
 .block {
 	position: absolute;
 	border: 1px solid black;
